<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSecondary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent" />



        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/profile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/m_nizam_setiawan" />

        <TextView
            android:id="@+id/tv_url_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/email" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/tittle" />

        <TextView
            android:id="@+id/tv_url_dicoding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/alamat" />


    </LinearLayout>
</ScrollView>